@@ -39,6 +39,7 @@ fixed bugs:
 - fixed bug when sorting knapsack constraints with the same weights
 - ensure consistency of LP bounds during OBBT diving, i.e., that lower <= upper holds exactly
 - fixed numerical bug in conflict analysis of genvbounds propagator
+- relaxed assert in SCIPvarCh{Lb,Ub}{Global,Local} that new bound must be tighter to feastol
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
